# price-tracker

./: .gitignore  README.md  pyproject.toml
price-tracker/: app.py  scraper.py
