[tool.poetry]
name = "price-tracker"
version = "0.1.0"
description = ""
authors = ["jvc19"]
readme = "README.md"
packages = [{include = "price_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.1"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
