[tool.poetry]
name = "price-tracker"
version = "0.1.0"
description = ""
authors = ["jvc19"]
readme = "README.md"
packages = [{include = "price_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.1"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
taskipy = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
uvicorn = "uvicorn price-tracker.app:app --reload"
dev = "task uvicorn --reload"
